[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes = "0.9.0-rc.4"
base64 = "0.22.1"
cbc = { version = "0.2.0-rc.4", features = ["block-padding", "alloc"] }
util = { path = "../../lib/util" }
comfy-table = "7.2.2"
anyhow = "1.0.102"