[package]
name = "httpcap"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "*"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
tracing-core = "0.1.36"
serde = { version = "1.0.228", features = ["derive"] }
util = { path = "../../lib/util" }
entity = { path = "../../lib/entity" }
util-proc = { path = "../../lib/util-proc" }
rest = { path = "../../lib/rest" }
clap = { version = "4.6.0", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v4", "v7"] }
serde_json = "1.0.149"
clickhouse = { version = "0.15.0", features = ["uuid", "time"] }
url = "2.5.8"
once_cell = "1.21.3"
tokio = "1.50.0"
