[package]
name = "truefriend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
bytes = "1.11.1"
async-trait = "0.1.89"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
util = { path = "../util" }