[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v7"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
async-trait = "0.1.89"
anyhow = "1.0.102"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.149"
bytes = "1.11.1"
