[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
async-trait = "0.1.89"
anyhow = "1.0.102"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.149"
bytes = "1.11.1"
tracing = "0.1.44"
clickhouse = "0.15.0"
entity = { path = "../entity" }